SERVER-106552: check for pending step down during reconfig (#37949)

GitOrigin-RevId: 115044d60b4cf23a3cf58fb62a731622b16523c8